# ccnl-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  i18n.ts  main.tsx  sort.ts  styles.css  theme.ts  types.ts
frontend/src/components/: CcnlTable.tsx  FiltersBar.tsx  LanguageToggle.tsx  MetricsGrid.tsx  PaginationBar.tsx  ThemeToggle.tsx
infra/bootstrap/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/main/: backend.tf  buildspec.yml  codebuild.tf  main.tf  notifications.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/ccnl_dashboard/: __main__.py  artifacts.py  cli.py  constants.py  dates.py  json_types.py  loader.py  metrics.py  models.py  normalize.py  pipeline.py  select.py
tests/: test_artifacts.py  test_cli.py  test_metrics.py  test_pipeline.py  test_selection.py
