[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "ccnl-dashboard"
version = "0.1.0"
description = "A dashboard for tracking the expiration status of current Italian CCNL contracts."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Riccardo Ruspoli", email = "riccardoruspoli@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
  "ccnl",
  "dashboard",
  "italy",
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
  "httpx~=0.28.0",
  "pydantic~=2.13",
]

[project.urls]
Homepage = "https://ccnl.riccardoruspoli.com"
Repository = "https://github.com/riccardoruspoli/ccnl-dashboard"
Issues = "https://github.com/riccardoruspoli/ccnl-dashboard/issues"
Documentation = "https://github.com/riccardoruspoli/ccnl-dashboard/blob/master/README.md"

[project.optional-dependencies]
dev = [
  "pytest~=8.4",
  "ruff",
]

[project.scripts]
ccnl-dashboard = "ccnl_dashboard.__main__:main"

[tool.uv.build-backend]
module-name = "ccnl_dashboard"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
